deployments/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: govuk-frontend-express-deployment
  labels:
    app: govuk-frontend-express
spec:
  replicas: 3
  selector:
    matchLabels:
      app: govuk-frontend-express # this should match the selector in service.yml
  template:
    metadata:
      labels:
        app: govuk-frontend-express # this should match the selector in service.yml
    spec:
      containers:
        - name: govuk-frontend-express
          image: ${REGISTRY}/${REPOSITORY}:${IMAGE_TAG}
          ports:
            - containerPort: 3000
