deployments/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: govuk-frontend-express-skeleton-ingress
  annotations:
    kubernetes.io/ingress.class: default
    external-dns.alpha.kubernetes.io/set-identifier: govuk-frontend-express-skeleton-ingress-${NAMESPACE}-green
    external-dns.alpha.kubernetes.io/aws-weight: '100'

spec:
  ingressClassName: default
  tls:
    - hosts:
        - ${NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
  rules:
    - host: ${NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: govuk-frontend-express-skeleton-service
                port:
                  number: 3000
